// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates local variables for named imports 1`] = `
"import React from 'react';
const {
  useState,
  useEffect
} = React;"
`;

exports[`supports import aliasing 1`] = `
"import React from 'react';
const {
  useState: foo
} = React;"
`;

exports[`supports import with no default import 1`] = `
"import _React from 'react';
const {
  useState
} = _React;"
`;

exports[`supports mixed imports 1`] = `
"import React from 'react';
const {
  useState
} = React;
const {
  useEffect
} = React;"
`;

exports[`transforms React.createElement calls 1`] = `
"import React from 'react';
const _createElement = React.createElement;

const element = _createElement('div');"
`;
